<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory android:title="@string/preference_organization_title">
        <ListPreference
            android:key="ORG_PREF_LIST"
            android:summary="@string/preference_organization_list_summary"
            android:title="@string/preference_organization_list_title"
            android:entries="@array/org_entries"
            android:entryValues="@array/org_values"
            android:defaultValue="popular"/>

    </PreferenceCategory>
    <PreferenceCategory
        android:title="Data Management">
        <Preference
            android:key="DELETE_DATA"
            android:title="Delete Data"
            android:summary="Click to delete your data."/>
    </PreferenceCategory>

</PreferenceScreen>